--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque cupiditate molestias vero odit aut porro voluptatem. Dicta repudiandae molestias, voluptatem perferendis obcaecati praesentium illo esse, dolores a cupiditate, suscipit eum?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de javascript/h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis magni officiis natus voluptas rerum? Exercitationem soluta officiis magni accusantium quod, dicta atque beatae. Dolorem voluptatem cupiditate distinctio sequi a error.</p>
             <p>YM</p>
         </article>
     </main>
