--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque cupiditate molestias vero odit aut porro voluptatem. Dicta repudiandae molestias, voluptatem perferendis obcaecati praesentium illo esse, dolores a cupiditate, suscipit eum?</p>
         </article>
         <article>
-            <h2>Curso de javascript/h2>
+            <h2>Curso de javascript</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis magni officiis natus voluptas rerum? Exercitationem soluta officiis magni accusantium quod, dicta atque beatae. Dolorem voluptatem cupiditate distinctio sequi a error.</p>
             <p>YM</p>
         </article>
